[package]
name = "bitcoin_tracker"
version = "0.1.0"
authors = ["bcpratt2000 <bcpratt2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.1.5"
futures = "0.3.1"
colour = "*"
chrono = "*"